Add : bootstrap textarea

--- a/HeartTalk/Views/Home/Index.cshtml
+++ b/HeartTalk/Views/Home/Index.cshtml
@@ -11,6 +11,13 @@
     </div>
 }
 
+
+<div class="form-group">
+    <label for="exampleFormControlTextarea1">Example textarea</label>
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" dir="rtl"></textarea>
+</div>
+
+
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
