--- a/HeartTalk/Views/Home/Index.cshtml
+++ b/HeartTalk/Views/Home/Index.cshtml
@@ -2,12 +2,13 @@
     ViewData["Title"] = "Home Page";
 }
 @using Microsoft.AspNetCore.Mvc.Routing
-@model IEnumerable<HeartTalk.Models.Note>
 
+@* we must have just one model in page and because of this reason we create class to have both IEnumerable<HeartTalk.Models.Note> and Note *@
 
-<form method="post" asp-route="AddNote">
-    <textarea class="form-control" id="TextArea1" rows="3" dir="rtl"></textarea>
-    <button type="submit">Send Heart Talk</button>
+@model NoteViewModel
+ <form method="post">
+    <input asp-for="NewNote.Content"/>
+    <button asp-route="AddNote">Send Heart Talk</button>
 </form>
 
 
@@ -24,7 +25,7 @@
 
 
 
-@foreach (var note in Model)
+@foreach (var note in Model.Notes)
 {
     <div class="card mb-3">
         <div class="card-body">
