--- a/HeartTalk/Views/Home/Index.cshtml
+++ b/HeartTalk/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
     </button>
     <ul class="dropdown-menu">
         <li><a class="dropdown-item" href="@Url.Action("FilterNotesWithSympathyCount","Home")">تعداد همدلی</a></li>
-        <li><a class="dropdown-item" href="#">Another action</a></li>
+        <li><a class="dropdown-item" href="@Url.Action("FilterNotesWithDate","Home")">تاریخ</a></li>
         <li><a class="dropdown-item" href="#">Something else here</a></li>
     </ul>
 </div>
