--- a/HeartTalk/Views/Home/Index.cshtml
+++ b/HeartTalk/Views/Home/Index.cshtml
@@ -7,8 +7,8 @@
 @* we must have just one model in page and because of this reason we create class to have both IEnumerable<HeartTalk.Models.Note> and Note *@
 
 @model NoteViewModel
- <form method="post">
-    <input asp-for="NewNote.Content"/>
+<form method="post">
+    <input asp-for="NewNote.Content" />
     <button asp-route="AddNote">Send Heart Talk</button>
 </form>
 
@@ -25,14 +25,16 @@
 </div>
 
 
-
-@foreach (var note in Model.Notes)
-{
-    //create dynamic id for each note , note-1,note-2 ,...
-    <div id="note-@note.Id" class="card mb-3">
-        @await Html.PartialAsync("_NotePartial", note)
-    </div>
-}
+<div id="notes-container">
+    @foreach (var note in Model.Notes)
+    {
+        //create dynamic id for each note , note-1,note-2 ,...
+        <div id="note-@note.Id" class="card mb-3">
+            @await Html.PartialAsync("_NotePartial", note)
+        </div>
+    }
+</div>
+<button id="load-more-btn" class="btn btn-primary" onclick="LoadMore()">Load More</button>
 
 
 
@@ -45,7 +47,7 @@
 
 <script>
     //name of addSympathy function is bind with sympathy button in _NotePartial
-    // use ajax to post from Client to server 
+    // use ajax to post from Client to server
     function addSympathy(noteId) {
         $.ajax({
             type: 'POST',
@@ -53,9 +55,29 @@
             data: { noteId: noteId },
             success: function (response) {
                 // Update the specific note's div with the updated partial view
-                // breakdown code 
+                // breakdown code
                 $('#note-' + noteId).html(response);
             },
         });
+    }
+        }
+</script>
+
+
+<script>
+
+    var page = 2;
+    function LoadMore() {
+        $.ajax({
+            type: 'GET',
+            url: '@Url.Action("LoadMore", "Home")',
+            data: { page: page },
+            success: function (response) {
+                $('#notes-container').append(response);
+
+                // Increment the page count
+                page++;
+            }
+        })
     }
 </script>
